--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,12 @@
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
+
+      <p id="finalDomain" class="alert alert-warning mt-4">My dog ate my homework</p>
+
     </div>
+
+   
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
